--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "date-fns": "^4.1.0",
-        "motion": "^12.4.2"
+        "motion": "^12.4.3",
+        "swiper": "^11.2.4"
     }
 }
