--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "date-fns": "^4.1.0",
         "motion": "^12.4.3",
         "swiper": "^11.2.4"
